# inclusive-web-performance-cx

./: .env.sample  .gitignore  README.md  pyproject.toml
api-client/: crux_api_client.py  fetch_url.py  main.py  token_bucket.py
api_client/: cli.py  crux_api_client.py  format_results.py  main.py  token_bucket.py
api_client/test/: test_format_results.py  test_main.py  urls.txt
cluster_urls/: cluster.py
format_urls/: main.py
format_urls/test/: input.csv  test_main.py
research/: cwv-by-origin.sql  fetch_url.py  government-sites-by-cwv.ipynb  government-website-performance.ipynb  government_sites_by_cwv.ipynb  government_website_performance.ipynb  lcp-ranking-by-origin.sql  origins-with-good-cwv.sql  single_agency_top_10k.ipynb  site-scan-and-crux-variance.ipynb  site_scan_and_crux_variance.ipynb  top-10k-pages.ipynb  top_10k_pages.ipynb
research/data/: crux-data-202406.csv  crux-data-202407.csv  cwv-by-origin-and-device-202407.csv  cwv-in-government-p75.csv  cwv-in-government-p90.csv  cwv-not-in-government-p75.csv  cwv-not-in-government-p90.csv  doi-crux-20241004.csv  lcp-by-origin.csv  sampled-crux-data-20240828.csv  sampled-crux-random-2k-20240828.csv  top-10000-pages-and-screens-30-days-20240812.csv  top-10000-pages-and-screens-30-days-20240828.csv  top-10000-pages-and-screens-30-days-doi-20241004.csv
research/sql/: cwv-by-origin-and-device.sql  cwv-by-origin.sql  lcp-ranking-by-origin.sql
research/utils/: load_results_to_dataframe.py
